<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <Button
        android:id="@+id/simple_adapter_btn"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/simple_adapter_demo" />

    <Button
        android:id="@+id/custom_dialog"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/custom_dialog_demo" />

    <Button
        android:id="@+id/xml_menu_btn"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/xml_menu_demo" />

    <Button
        android:id="@+id/action_context_btn"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/action_context_demo" />

    <Button
        android:id="@+id/progress_bar_btn"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:text="@string/process_bar_demo" />
</LinearLayout>

